Fixing z-index

--- a/frontend/src/Components/Registration/register-login.css
+++ b/frontend/src/Components/Registration/register-login.css
@@ -6,6 +6,14 @@
   top: 3em;
 }
 
+.right-side.right {
+    z-index: 0;
+}
+
+.right-side.left {
+    z-index: 0;
+}
+
   .header {
     font-size: 24px;
     font-family: "Open Sans", sans-serif;
@@ -36,8 +44,8 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        
-        }  
+
+        }
 
         label {
           font-size: 18px;}
@@ -69,4 +77,4 @@
 
   .footer {
     margin-top: 10px;
-  }   
+  }
